# streetpy

./: .gitattributes  .lgtm.yml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
devtools/: README.md
devtools/conda-envs/: environment.yaml
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat
streetpy/: __init__.py  _version.py  attributes.py  matching.py  openstreetmap.py  shortest_path.py  simplification.py  spatial.py  streetpy.py  utils.py
streetpy/config/: constants.py  osm_tags.py  parse.py  speeds.py
streetpy/tests/: test_streetpy.py
