[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "streetpy"
authors = [{ name = "Vincent Tinet" }]
description = "A python library to analyse streets dataframes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "geopandas",
    "shapely",
    "pandana",
    "osmdatapy",
    "netpandas",
]
dynamic = ["version"]

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/chourmo/streetpy"
Issues = "https://github.com/chourmo/streetpy/issues"
